removed unused imports and other cleanup